data/derived/sp14/progs/unify/prog4752.ml.out
Characters 61-64:
  wwhile(f b, b);;
         ^^^
Error: This expression has type bool but an expression was expected of type
         'a -> 'a * bool
